--- a/src/index.css
+++ b/src/index.css
@@ -97,8 +97,17 @@ body {
       #B9B1A9,
    #AFA79F,
    #A59D95,
+   #000000,
+   #9B938B,
+   #918981,
+   #D7CFC7,
+      #B9B1A9,
+   #AFA79F,
+   #A59D95,
+   #000000,
    #9B938B,
    #918981
+
      );
    top: 50%;
    left:50%;
